--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,15 @@
 {
   "name": "Google Meet: Auto Disable Camera And Mute Audio",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Defaults camera to off, and mute audio when joining a Google Meet meeting",
-  "manifest_version": 2,
-  "permissions": [],
+  "manifest_version": 3,
+  "permissions": [
+    "scripting",
+    "activeTab"
+  ],
+  "host_permissions": [
+    "https://meet.google.com/*"
+  ],
   "content_scripts": [
     {
       "js": [
@@ -20,5 +26,12 @@
     "48": "icon/icon48.png",
     "128": "icon/icon128.png"
   },
-  "browser_action": {}
+  "action": {
+    "default_icon": {
+      "16": "icon/icon16.png",
+      "48": "icon/icon48.png",
+      "128": "icon/icon128.png"
+    },
+    "default_title": "Google Meet Auto Mute"
+  }
 }
